# Document-Q-A

./: .gitignore  GETTING_STARTED.md  LICENSE  Project Roadmap.md  README.md  postman_collection.json
backend/: .env.example  build_backend.py  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  chat.py  documents.py  health.py  router.py
backend/app/core/: __init__.py  config.py  database.py  models.py  schemas.py
backend/app/crud/: __init__.py  chat.py  document.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  chat.py  document.py
backend/app/schemas/: __init__.py  chat.py  common.py  document.py
backend/app/services/: __init__.py  chat_service.py  doc_service.py  document_service.py  llm_service.py  pdf_parser.py  text_chunker.py  thumbnail_service.py  vector_service.py  vector_store.py
docs/: backend_beginner_guide.md  backend_development_guide.md  frontend_development_guide.md  production_fix_guide.md  setup_and_run.md  tauri_packaging_guide.md
frontend/: .env.example  CODING_CONVENTION.md  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/binaries/: .gitkeep
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: lib.rs
frontend/src/api/: index.ts
frontend/src/components/: ErrorBoundary.tsx
frontend/src/constants/: index.ts
scripts/: build-tauri.ps1  build.ps1  start-dev.ps1  test-setup.ps1
(+93 files in other folders)
